<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aracı</string>
    <string name="profile">Profilim - Aracı</string>
    <string name="friendProfile">Profil - Aracı</string>
    <string name="photo">Fotoğraf - Aracı</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_message">Aracı, mekan tercihlerinizde size yardımcı olmak için kullanabileceğiniz bir uygulamadır. Aracı ile mekanlarda check-in yaparak, anketler doldurarak ve mekan hakkında eleştiriler yaparak tercihlerinizi belirleyebilirsiniz.</string>
    <string name="image_content_description">Resim</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="e_mail">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="passwordRepeat">Şifre Tekrarı</string>
    <string name="name">Ad</string>
    <string name="surname">Soyadı</string>
    <string name="gender">Cinsiyet: </string>
    <string name="male">Erkek</string>
    <string name="female">Kadın</string>
    <string name="birthDate">Doğum Tarihi</string>
    <string name="photos">Fotoğraflar</string>
    <string name="followers">Takipçilerim</string>
    <string name="followedBys">Takip Ettiklerim</string>
    <string name="checkIns">Check-In\'lerim</string>
    <string name="comments">Yorumlarım</string>
    <string name="feedbacks">Geri Beslemelerim</string>
    <string name="likeDislikes">Beğenilerim</string>
    <string name="open">Aç</string>
    <string name="close">Kapat</string>
    <string name="comment">Yorum</string>
    <string name="send">Gönder</string>
    <string name="checkIn">Check-In - Aracı</string>
    <string name="place">Mekan - Aracı</string>
    <string name="follow">Takip Et</string>
    <string name="location">Lokasyon</string>
    <string name="workingHour">Çalışma Saatleri</string>
    <string name="feedback">Geri Besleme</string>
    <string name="check_in">Check-In</string>
    <string name="phone">Telefon Bilgileri</string>
    <string name="ambiance">Ambiyans</string>
    <string name="price">Fiyat</string>
    <string name="service">Servis</string>
    <string name="flavour">Lezzet</string>
    <string name="fifty">50</string>
    <string name="placeComments">Mekan Yorumları</string>
    <string name="photoComments">Fotoğraf Yorumları</string>
    <string name="photoLikes">Beğeniler</string>
    <string name="followedPlace">Takip Edilenler</string>
    <string name="events">Etkinlikler</string>
    <string name="eventAdd">Etkinlik Ekle</string>
    <string name="eventAddName">Etkinlik Adı</string>
    <string name="eventAddDescription">Etkinlik Açıklaması</string>
    <string name="eventAddStartDate">Başlangıç Günü</string>
    <string name="eventAddStartTime">Başlangıç Saati</string>
    <string name="eventAddEndDate">Bitiş Günü</string>
    <string name="eventAddEndTime">Bitiş Saati</string>
    

</resources>