<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/signUpEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/eventAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpEMail"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/eventAddName"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/eventAddDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventAddName"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/eventAddDescription"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="10dp" />

        <EditText
            android:id="@+id/eventAddStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eventAddDescription"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:ems="10"
            android:hint="@string/eventAddStartDate"
            android:inputType="date"
            android:padding="10dp" >
        </EditText>

        <EditText
            android:id="@+id/eventAddStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eventAddStartDate"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:ems="10"
            android:hint="@string/eventAddStartTime"
            android:inputType="date"
            android:padding="10dp" >
        </EditText>

        <EditText
            android:id="@+id/eventAddEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eventAddStartTime"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:ems="10"
            android:hint="@string/eventAddEndDate"
            android:inputType="date"
            android:padding="10dp" >
        </EditText>

        <EditText
            android:id="@+id/eventAddEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eventAddEndDate"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:ems="10"
            android:hint="@string/eventAddEndTime"
            android:inputType="date"
            android:padding="10dp" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventAddEndTime"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/dialogSignUpButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>