<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpEMail"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUpPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/passwordRepeat"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpPasswordRepeat"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUpSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpName"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/surname"
            android:inputType="text"
            android:padding="10dp" />

        <RelativeLayout
            android:id="@+id/signUpGenderRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpSurname"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext" >

            <TextView
                android:id="@+id/signUpGenderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/signUpGender"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/signUpGender"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/signUpGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="left"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/signUpGenderMale"
                    style="@style/radioButtonAppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/signUpGenderFemale"
                    style="@style/radioButtonAppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@android:color/black" />
            </RadioGroup>
        </RelativeLayout>

        <EditText
            android:id="@+id/signUpBirthDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/signUpGenderRelativeLayout"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:ems="10"
            android:hint="@string/birthDate"
            android:inputType="date"
            android:padding="10dp" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpBirthDateEditText"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/dialogSignUpButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>