<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <EditText
            android:id="@+id/signInEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signInEMail"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signInPassword"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/dialogSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <Button
                android:id="@+id/dialogSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>