<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/homeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_message" />

        <LinearLayout
            android:id="@+id/homeImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/homeMessage"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/border_imageview"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/mekan1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/border_imageview"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/mekan2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/border_imageview"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/mekan3" />
        </LinearLayout>

        <Button
            android:id="@+id/homeSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/homeImages"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</ScrollView>