<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/feedbackAmbianceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackTextAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/ambiance"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackInputAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackValueAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackServiceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackAmbianceLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackTextService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/service"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackInputService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackValueService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackFlavourLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackServiceLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackTextFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/flavour"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackInputFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackValueFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackPriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackFlavourLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackTextPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/price"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackInputPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackValuePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <Button
            android:id="@+id/feedbackSendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackPriceLayout"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button"
            android:padding="15dp"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>