<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:longClickable="true"
    android:scrollbars="none"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/feedbackItemRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#DDDDDDDD"
        android:clickable="true"
        android:longClickable="true" >

        <TextView
            android:id="@+id/feedbackPlaceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/feedbackItemAmbianceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackPlaceTextView"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackItemTextAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/ambiance"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackItemInputAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackItemValueAmbiance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackItemServiceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackItemAmbianceLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackItemTextService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/service"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackItemInputService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackItemValueService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackItemFlavourLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackItemServiceLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/feedbackItemTextFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/flavour"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackItemInputFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackItemValueFlavour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackItemPriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackItemFlavourLayout"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:gravity="center"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/feedbackItemTextPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="#111111"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/feedbackItemInputPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:max="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackItemValuePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/fifty"
                android:textColor="#111111" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>